--- a/public/css/index.css
+++ b/public/css/index.css
@@ -92,6 +92,7 @@ section {
   margin-top: 2rem;
   display: flex;
   gap: 1.25rem;
+  flex-wrap: wrap;
 
   & p {
     color: var(--text-secondary);
@@ -311,5 +312,11 @@ h2 {
   .bento-item.wide {
       grid-column: auto;
       grid-row: auto;
+  }
+}
+
+@media (max-width: 480px) {
+  .social-links p, .social-links a {
+    font-size: 1.2rem; /* Ajusta según necesites */
   }
 }
