--- a/public/css/index.css
+++ b/public/css/index.css
@@ -151,7 +151,7 @@ h2 {
 
 .skills {
   display: flex;
-  text-wrap: wrap;
+  flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
   margin-top: 2rem;
@@ -162,6 +162,7 @@ h2 {
   padding: 0.5rem 1rem;
   border-radius: 20px;
   font-size: 0.9rem;
+  flex: 0 0 auto;
 }
 
 .bento-grid {
@@ -318,5 +319,9 @@ h2 {
 @media (max-width: 480px) {
   .social-links p, .social-links a {
     font-size: 1.2rem; /* Ajusta según necesites */
+  }
+  .skill {
+    font-size: 0.8rem;
+    padding: 0.4rem 0.8rem;
   }
 }
